# pandoc-drawio

./: .gitignore  Cargo.lock.license  Cargo.toml  Readme.md  about.hbs  about.toml  build.rs  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: build-release.yml  cargo-audit.yml  tests.yml
LICENSES/: MIT.txt
changelogs/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.3.1.md
src/: cache.rs  config.rs  drawio.rs  main.rs  pandoc.rs
tests/: .gitignore  test.html  test.md  test.sh
tests/assets/: .gitignore  test.drawio
